# teex

./: .coveragerc  .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  _utils.py  codecov.yml  datagen.py  decisionRule.py  evaluation.py  featureImportance.py  image.py  image_utils.py  pyproject.toml  requirements.txt  rst.rst  rule.py  saliencyMap.py  setup.cfg  torchEvaluation.py  utils.py
.github/workflows/: CICD_workflow.yml  draft-pdf.yml  main.yml  tests.yml
.ipynb_checkpoints/: requirements-checkpoint.txt
TAIAOexp/: datasets.py  decisionRule.py  featureImportance.py  saliencyMap.py  torchEvaluation.py  wordImportance.py
TAIAOexp/_baseClasses/: _baseClassifier.py  _baseDatasets.py
_utils/: _arrays.py  image.py
dataGen/: datagen.py
docs/: conf.py  index.rst  requirements.txt  teex.rst
evaluation/: evaluation.py  featureImportance.py  image.py  kahikatea_eval.py  model.py  rule.py
explanation/: featureImportance.py  images.py
explanationGen/: universalGenerator.py
paper/: paper.bib  paper.md
syntheticData/: dataGen.py  image.py  tabular.py
tee/: datasets.py  decisionRule.py  featureImportance.py  saliencyMap.py  wordImportance.py
teex/: datasets.py  decisionRule.py  featureImportance.py  saliencyMap.py  wordImportance.py
tests/: requirements.txt  runTests.py  test_decisionRule.py  test_featureImportance.py  test_private.py  test_saliencyMap.py  test_wordImportance.py
transparentModels/: baseClassifier.py  decisionRule.py  featureImportance.py  pixelImportance.py
utils/: image.py  pathChecking.py  rule.py  tabular.py
(+418 files in other folders)
