[metadata]
name = teex
version = 0.1a1
author = Jesus Antonanzas
author_email = jesus.maria.antonanzas@estudiantat.upc.edu
description = A Toolbox for the Evaluation of Explanations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chus-chus/teex
project_urls =
    Documentation = https://teex.readthedocs.io
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.5

[options.packages.find]
where = .