[metadata]
name = teex
author = Jesus Antonanzas
author_email = jesus.maria.antonanzas@estudiantat.upc.edu
description = A Toolbox for the Evaluation of Explanations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chus-chus/teex
project_urls =
    Documentation = https://teex.readthedocs.io
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
version = '1.0.4'

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8,<3.10
exclude = ./docs/
          ./teex/_datasets/saliencyMap/
          ./teex/_datasets/wordImportance/

[options.packages.find]
where = .
